# homelab

./: .gitignore  README.md  data.md  ioAnalysis.ipynb  pyproject.toml  recordplayer.md  truenas.py
homeassistant/: spotify_crawl.ipynb
homeassistant/appdaemon/: apps.yaml  random_fragezeichen.py
homepage/config/: bookmarks.yaml  services.yaml  settings.yaml  widgets.yaml
src/ioutils/: fio.py  testing.py
src/truenas/: schedule.py
