[project]
name = "homelab"
version = "0.1.0"
description = "Miscellaneous scripts/utils for my home lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=6.30.0",
    "ipython>=8.31.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.3",
    "spotipy>=2.25.1",
    "wakeonlan>=3.1.0",
]

[project.scripts]
truenas-schedule = "truenas.schedule:main"
iotest = "ioutils.testing:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
